--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 
         <nav id="nav">
             <div class="info">
-                <p>19 year old student with experience in HTML, CSS and JavaScript</p><!-- 
+                <p>19 year old student with experience in HTML, CSS and JavaScript</p>
+                <!-- 
                 <p>Follow me on:</p> -->
                 <div id="svg">
 
@@ -102,12 +103,12 @@
             </div>
         </article>
 
-        <br>
+        <br><!-- 
 
         <script type='text/javascript'>
             kofiwidget2.init('Support Me on Ko-fi', '#29abe0', 'O5O4ACXYY');
             kofiwidget2.draw();
-        </script>
+        </script> -->
 
     </main>
 
