--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        SrNweo
+        Loading
     </title>
     <style>
         body {
@@ -18,15 +18,14 @@
 
 <body>
     <p>
-        unavalible
+        loading
     </p>
-    <!-- 
+    <
     <script>
         setTimeout(() => {
             console.log("loading...")
         }, 1000);
-        window.location.replace("https://www.google.com");
-    </script> -->
+        window.location.replace("https://www.google.com");</script>
 </body>
 
 </html>
