--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         setTimeout(() => {
             console.log("loading...")
         }, 1000);
-        window.location.replace("https://www.google.com");</script>
+        window.location.replace("https://sites.google.com/view/srnweo/");</script>
 </body>
 
 </html>
