--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <title>SrNweo</title>
@@ -40,4 +40,14 @@
       </p>
     </footer>
   </body>
+</html>
+ -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <script>
+      window.location.href = "https://linktr.ee/ZrNweo";
+    </script>
+  </head>
+  <body></body>
 </html>
