--- a/index.html
+++ b/index.html
@@ -1,53 +1,27 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>SrNweo</title>
-    <link rel="stylesheet" href="data/css/main.css" />
-  </head>
-  <body>
-    <header>
-      <h3>Welcome to SrNweo's Website</h3>
-    </header>
-    <nav>
-      <p>
-        hello i'm nweo
-        <small>this is a nav</small>
-      </p>
-    </nav>
-    <main>
-      <article>
-        <div id="news">
-          <h2>News</h2>
-          <p>
-            <strong>follow me on newgrounds and twt!</strong>
-          </p>
-        </div>
-        <p>it's dangerous to go alone, choose a page</p>
-        <ul>
-          <li><a href="i/me/index.html">about me</a></li>
-          <li><a href="i/cnt/index.html">contact</a></li>
-          <li><a href="i/prj/index.html">projects</a></li>
-          <li><a href="i/dnt/index.html">donate me</a></li>
-        </ul>
-      </article>
-    </main>
-    <footer>
-      <p>
-        <small
-          >this page does not store any type of data · 2022 <br />
-          i love this design
-        </small>
-      </p>
-    </footer>
-  </body>
-</html>
- -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script>
-      window.location.href = "https://linktr.ee/ZrNweo";
-    </script>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ZrNweo</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div id="title">
+        <h1 title="Amogus">ZrNweo</h1>
+        <h6>19 / Always bored and hungry</h6>
+      </div>
+    </header>
+    <nav>
+    <ul>
+        <li><a href="https://www.twitter.com/zrnweo" target="_blank"><p id="twt" title="Follow me on Twitter!">Twitter</p></a></li>
+        <li><a href="https://discord.gg/QX4DdYauJp" target="_blank"><p id="dsc" title="Join on my Discord server">Discord</p></a></li>
+    </ul>
+    </nav>
+    <main>
+        <p>wip</p>
+    </main>
+  </body>
 </html>
